Text wrap fix

--- a/src/app/basic-components/social-media/social-media.component.css
+++ b/src/app/basic-components/social-media/social-media.component.css
@@ -14,4 +14,5 @@ img {
 
 p {
   margin: 0 !important;
+  font-size: x-small;
 }
